[gd_scene load_steps=17 format=2]

[ext_resource path="res://src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/CherryMoves.png" type="Texture" id=2]
[ext_resource path="res://assets/PinkHairGirl.png" type="Texture" id=3]
[ext_resource path="res://src/common/HealthDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Hit and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/common/Stats.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Player/PlayerStats.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.49221
height = 0.750618

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.1434
height = 2.75916

[sub_resource type="CircleShape2D" id=3]
radius = 151.667

[sub_resource type="Animation" id=4]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=6]
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=7]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MoveSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]
resource_name = "damaged"
length = 1.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MoveSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.804688, 0.235748, 0.235748, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 0.804688, 0.235748, 0.235748, 0.588235 ), Color( 1, 1, 1, 1 ), Color( 0.804688, 0.235748, 0.235748, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_recieving_damage"
} ]
}

[sub_resource type="Animation" id=9]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("StatusSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 17
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.140305, 0 )
shape = SubResource( 1 )

[node name="HealthDisplay" parent="." instance=ExtResource( 4 )]
position = Vector2( -6.38798, -18.2118 )
scale = Vector2( 0.07, 0.07 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.176773, -5.65685 )
shape = SubResource( 2 )

[node name="FindRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="Collision" type="CollisionShape2D" parent="FindRadius"]
shape = SubResource( 3 )

[node name="MoveSprite" type="Sprite" parent="."]
position = Vector2( 0, -5.472 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4
frame = 2

[node name="StatusSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -7 )
texture = ExtResource( 2 )
hframes = 5
vframes = 5
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.75
anims/walk_back = SubResource( 4 )
anims/walk_left = SubResource( 5 )
anims/walk_right = SubResource( 6 )
anims/walk_straight = SubResource( 7 )

[node name="StatusPlayer" type="AnimationPlayer" parent="."]
anims/damaged = SubResource( 8 )
anims/dying = SubResource( 9 )

[node name="Stats" parent="." instance=ExtResource( 6 )]
script = ExtResource( 7 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.9, 0.9 )
smoothing_enabled = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="FindRadius" to="." method="_on_FindRadius_body_entered"]
[connection signal="body_exited" from="FindRadius" to="." method="_on_FindRadius_body_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]

[editable path="Hurtbox"]
